versioned_docs/version-8.2/apis-tools/tasklist-api-rest/schemas/responses/task-search-response.mdx
---
id: task-search-response
title: TaskSearchResponse
hide_table_of_contents: false
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

export const Bullet = () => (
  <>
    <span
      style={{
        fontWeight: "normal",
        fontSize: ".5em",
        color: "var(--ifm-color-secondary-darkest)",
      }}
    >
      &nbsp;●&nbsp;
    </span>
  </>
);

export const SpecifiedBy = (props) => (
  <>
    Specification
    <a
      className="link"
      style={{ fontSize: "1.5em", paddingLeft: "4px" }}
      target="_blank"
      href={props.url}
      title={"Specified by " + props.url}
    >
      ⎘
    </a>
  </>
);

export const Badge = (props) => (
  <>
    <span class={"badge badge--" + props.class}>{props.text}</span>
  </>
);

TaskSearchResponse - representing the searched task.

<Tabs groupId="schema" defaultValue="schema" values={
[
{label:'Schema',value: 'schema'},
{label:'Example value',value: 'example'}
]
}>
<TabItem value='schema'>

```graphql
{
    "id": string,
    "name": string,
    "taskDefinitionId": string,
    "processName": string,
    "creationDate": string,
    "completionDate": string,
    "assignee": string,
    "taskState": TaskState,
    "sortValues": [string],
    "isFirst": boolean,
    "formKey": string,
    "processDefinitionKey": string,
    "processInstanceKey": string,
    "dueDate": string,
    "followUpDate": string,
    "candidateGroups": [string],
    "candidateUsers": [string]
}
```

</TabItem>

<TabItem value='example'>

```json
{
  "id": "string",
  "name": "string",
  "taskDefinitionId": "string",
  "processName": "string",
  "creationDate": "string",
  "completionDate": "string",
  "assignee": "string",
  "taskState": "CREATED",
  "sortValues": ["string"],
  "isFirst": true,
  "formKey": "string",
  "processDefinitionKey": "string",
  "processInstanceKey": "string",
  "dueDate": "2023-03-29T20:08:07.171Z",
  "followUpDate": "2023-03-29T20:08:07.171Z",
  "candidateGroups": ["string"],
  "candidateUsers": ["string"]
}
```

</TabItem>
</Tabs>

### Fields

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>id</b></code>](#)<Bullet />`string` <Badge class="secondary" text="non-null"/>

> The unique identifier of the task

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>name</b></code>](#)<Bullet />`string` <Badge class="secondary" text="non-null"/>

> Name of the task

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>taskDefinitionId</b></code>](#)<Bullet />`string` <Badge class="secondary" text="non-null"/>

> User Task ID from the BPMN definition

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>processName</b></code>](#)<Bullet />`string` <Badge class="secondary" text="non-null"/>

> Name of the process

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>creationDate</b></code>](#)<Bullet />`string` <Badge class="secondary" text="non-null"/>

> When was the task created
> (renamed equivalent of [`Task.creationTime`](docs/apis-tools/tasklist-api/objects/task.mdx#code-style-fontweight-normal-taskbcreationtimebcodestring--) field)

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>completionDate</b></code>](#)<Bullet />`string`

> When was the task completed
> (renamed equivalent of [`Task.completionTime`](docs/apis-tools/tasklist-api/objects/task.mdx#code-style-fontweight-normal-taskbcompletiontimebcodestring-) field)

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>assignee</b></code>](#)<Bullet />`string`

> Username/id of who is assigned to the task

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>taskState</b></code>](#)<Bullet />[`TaskState`](../enums/task-state.mdx) <Badge class="secondary" text="non-null"/> <Badge class="secondary" text="enum"/>

> State of the task

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>sortValues</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Array of values to be copied into [`TaskSearchRequest`](../requests/task-search-request.mdx) to request for next or previous page of tasks.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>isFirst</b></code>](#)<Bullet />`boolean`

> Flag to show that the task is first in current filter

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>formKey</b></code>](#)<Bullet />`string`

> Reference to the task form

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>processDefinitionKey</b></code>](#)<Bullet />`string`

> Reference to process definition
> (renamed equivalent of [`Task.processDefinitionId`](docs/apis-tools/tasklist-api/objects/task.mdx#code-style-fontweight-normal-taskbprocessdefinitionidbcodestring-) field)

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>processInstanceKey</b></code>](#)<Bullet />`string`

> Reference to process instance id
> (renamed equivalent of [`Task.processInstanceId`](docs/apis-tools/tasklist-api/objects/task.mdx#code-style-fontweight-normal-taskbprocessinstanceidbcodestring-) field)

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>candidateGroups</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Candidate groups

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>candidateUsers</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Candidate users

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>followUpDate</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Follow-up date for the task

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchResponse.<b>dueDate</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Due date for the task

### Returned by

[`Search tasks`](/docs/apis-tools/tasklist-api-rest/controllers/tasklist-api-rest-task-controller.md#search-tasks) <Badge class="secondary" text="POST"/>
